Fix disabled Accordions not showing a disabled cursor (#2947)

--- a/packages/core/src/accordion/AccordionHeader.css
+++ b/packages/core/src/accordion/AccordionHeader.css
@@ -24,6 +24,7 @@
 .saltAccordionHeader:disabled {
   background: var(--salt-actionable-secondary-background);
   color: var(--salt-content-primary-foreground-disabled);
+  cursor: var(--salt-actionable-cursor-disabled);
 }
 
 .saltAccordionHeader-icon {
